<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Morse Audio Trainer</string>
    <string name="nothing_selected">Nothing is selected! please select which characters you want to learn!</string>
    <string name="settings">Settings</string>
    <string name="progress">Progress</string>
    <string name="empty" translatable="false">" "</string>
    <string name="singing_a">al-FA</string>
    <string name="singing_b">BE a good boy, BOB is the man</string>
    <string name="singing_c">CO-ca CO-la</string>
    <string name="singing_d">DOG did it, DRAC-u-la</string>
    <string name="singing_e">eh?, hey!</string>
    <string name="singing_f">did i FAIL it?, get a HAIR-cut, did it HURT you</string>
    <string name="singing_g">GOO-GLE-ad, GOOD GRAV-y, GOD LOVES it</string>
    <string name="singing_h">hitting the hip, ho-li-day-inn</string>
    <string name="singing_i">did It, dig-It,</string>
    <string name="singing_j">in JAWS JAWS JAWS, i WANT YOU, JONES</string>
    <string name="singing_k">KAN-dy KID, KICK the CAN, KANG-a-ROO</string>
    <string name="singing_l">a LIGHT is lit, li-NO-le-um</string>
    <string name="singing_m">MMMM-MMMM, MA-MA, LIKE MIKE</string>
    <string name="singing_n">NI-gel, NU-dist</string>
    <string name="singing_o">O-RE-O, ONE OF US, HO HO HO</string>
    <string name="singing_p">a PIZ-ZA pie</string>
    <string name="singing_q">QUEUE OV-er HERE, GOD SAVE the QUEEN</string>
    <string name="singing_r">ro-TA-tion</string>
    <string name="singing_s">si-si-si, ts-ts-ts</string>
    <string name="singing_t">THRUST, TALL</string>
    <string name="singing_u">gid-dy UP, u-ni-FORM</string>
    <string name="singing_v">Beet-ho-ven\'s FIFTH, vee-vee-vee VA</string>
    <string name="singing_w">the WORLD\' WAR, with WHITE WHALE</string>
    <string name="singing_x">X marks the SPOT, EX-tra ex-PENSE</string>
    <string name="singing_y">WHY did I DIE?, YEL-low YO-YO</string>
    <string name="singing_z">ZSA ZSA did it, </string>
    <!--<string name="singing_ch"></string>
    <string name="singing_sh"></string>
    <string name="singing_tvznk"></string>
    <string name="singing_ee"></string>
    <string name="singing_yu"></string>
    <string name="singing_ya"></string>-->

    <string name="latins">latins</string>
    <string name="number">number</string>
    <string name="character">character</string>
    <string name="cyrilic">cyrilic</string>
    <string name="unknown">unknown</string>


    <string name="cyr_singing_a">ай-даа</string>
    <string name="cyr_singing_b">баа-ки-те-кут, бей-ба-ра-бан</string>
    <string name="cyr_singing_c">цаа-пли-наа-ши, цаа-пли-цаа-пли</string>
    <string name="cyr_singing_d">доо-ми-ки</string>
    <string name="cyr_singing_e">есть</string>
    <string name="cyr_singing_f">фи-ли-моон-чик</string>
    <string name="cyr_singing_g">гаа-раа-жи, гаа-гаа-рин</string>
    <string name="cyr_singing_h">хи-ми-чи-те</string>
    <string name="cyr_singing_i">и-ди</string>
    <string name="cyr_singing_j">йас-наа-паа-раа, йош-каа-роо-лаа</string>
    <string name="cyr_singing_k">каак-же-таак, каак-де-лаа, каа-тень-каа</string>
    <string name="cyr_singing_l">лу-наа-ти-ки</string>
    <string name="cyr_singing_m">маа-маа, моор-зее</string>
    <string name="cyr_singing_n">ноо-мер, наа-те</string>
    <string name="cyr_singing_o">оо-коо-лоо</string>
    <string name="cyr_singing_p">пи-лаа-поо-ёт, пи-лаа-ноо-ет</string>
    <string name="cyr_singing_q">щаа-ваам-не-шаа, щуу-каа-жи-ваа</string>
    <string name="cyr_singing_r">ре-шаа-ет, ру-каа-ми</string>
    <string name="cyr_singing_s">си-ни-е, си-не-е, са-мо-лёт</string>
    <string name="cyr_singing_t">таак</string>
    <string name="cyr_singing_u">у-нес-лоо, у-бе-гуу</string>
    <string name="cyr_singing_v">же-ле-зис-тоо, я-бук-ва-жее</string>
    <string name="cyr_singing_w">ви-даа-лаа, вол-чаа-таа</string>
    <string name="cyr_singing_x">тоо-мяг-кий-знаак</string>
    <string name="cyr_singing_y">ыы-не-наа-доо, йош-каа-роо-лаа</string>
    <string name="cyr_singing_z">заа-каа-ти-ки, заа-моо-чи-ки</string>
    <string name="cyr_singing_ch">чаа-шаа-тоо-нет, чее-лоо-вее-чек</string>
    <string name="cyr_singing_sh">шаа-роо-ваа-рыы, шуу-раа-доо-маа</string>
    <string name="cyr_singing_tvznk">ээ-тоо-твёр-дыый-знаак</string>
    <string name="cyr_singing_ee">э-ле-роо-ни-ки, э-ле-ктроо-ни-ки</string>
    <string name="cyr_singing_yu">ю-ли-аа-наа</string>
    <string name="cyr_singing_ya">я-маал-я-маал</string>

    <string name="Appearance">Appearance</string>
    <string name="Click_to_change_language">сlick to change language of interface</string>
    <string name="Language">Language</string>
    <string name="Choose_Language">Choose Language</string>
    <string name="training">Training</string>
    <string name="letter">Character</string>
    <string name="code">code</string>

    <string name="about">About</string>
    <string name="continue_button">Continue</string>
    <string name="about_text">Simple morse trainer with sound feedback written by Max Starikov http://maxistar.ru</string>
    <string name="languageDefault">System</string>
    <string name="languageRussian">Russian</string>
    <string name="languageSpanish">Spanish</string>
    <string name="languageEnglish">English</string>
    <string name="preferencesAbout">About</string>
    <string name="preferencesAboutApp">About Morse Teacher</string>
    <string name="preferencesAboutSummary">just shortly about the application</string>
    <string name="preferencesPrivacyPolicy">Privacy Policy</string>
    <string name="preferencesVersion">Version</string>
    <string name="preferencesWhatToLearn">What to learn</string>
    <string name="preferencesLatinCharacters">Latin Charactes</string>
    <string name="preferencesLearnLatin">learn latin letters</string>
    <string name="preferencesNumbers">Numbers</string>
    <string name="preferencesLearnNumbers">learn numbers</string>
    <string name="preferencesPunctation">punctuation marks</string>
    <string name="preferencesLearnPuctation">learn punctuation marks</string>
    <string name="preferencesCyrillic">Cyrillic Letters</string>
    <string name="preferencesLearnCyrillic">learn cyrillic letters</string>
    <string name="dash" translatable="false">−</string>
    <string name="dot" translatable="false">•</string>
    <string name="dot_dash" translatable="false">•/−</string>
    <string name="preferenceVolumeFunctions">Volume Buttons</string>
    <string name="preferenceVolumeFunctionsSummary">Use volume buttons for navigation</string>

    <string name="preferenceOneButtonMode">One Button Mode</string>
    <string name="preferenceOneButtonModeSummary">Use the one button for dash and dots</string>
    <string name="title_activity_telegraph" translatable="false">TelegraphActivity</string>
</resources>