<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" android:key="preferences" >
    <PreferenceCategory
        android:title="@string/preferencesWhatToLearn">
        <CheckBoxPreference
            android:key="learn_latinica"
            android:title="@string/preferencesLatinCharacters"
            android:summary="@string/preferencesLearnLatin"
            android:defaultValue="true" />
        <CheckBoxPreference
            android:key="learn_numbers"
            android:title="@string/preferencesNumbers"
            android:summary="@string/preferencesLearnNumbers"
            android:defaultValue="true" />
        <CheckBoxPreference
            android:key="learn_punctuation_signs"
            android:title="@string/preferencesPunctation"
            android:summary="@string/preferencesLearnPuctation"
            android:defaultValue="true" />
        <CheckBoxPreference
            android:key="learn_cyrilics"
            android:title="@string/preferencesCyrillic"
            android:summary="@string/preferencesLearnCyrillic"
            android:defaultValue="false" />
        <CheckBoxPreference
            android:key="use_volume_buttons"
            android:title="@string/preferenceVolumeFunctions"
            android:summary="@string/preferenceVolumeFunctionsSummary"
            android:defaultValue="false" />
        <CheckBoxPreference
            android:key="one_button_mode"
            android:title="@string/preferenceOneButtonMode"
            android:summary="@string/preferenceOneButtonModeSummary"
            android:defaultValue="false" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/Appearance">
        <ListPreference
            android:entries="@array/language_names"
            android:entryValues="@array/language_values"
            android:key="language"
            android:summary="@string/Click_to_change_language"
            android:title="@string/Language"
            android:dialogTitle="@string/Choose_Language"
            />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/preferencesAbout">
        <Preference
            android:key="version_name"
            android:summary=""
            android:title="@string/preferencesVersion" />
        <com.maxistar.morsetrainer.AboutBox
            android:title="@string/preferencesAbout"
            android:summary="@string/preferencesAboutSummary"
            android:dialogTitle="@string/preferencesAboutApp" />
        <Preference
            android:key="privacy"
            android:summary="https://morze.maxistar.me/legal/privatepolicy/"
            android:title="@string/preferencesPrivacyPolicy" />
    </PreferenceCategory>
</PreferenceScreen>