<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >
    <item
        android:id="@+id/menu_prograss"
        android:orderInCategory="2"
        app:showAsAction="never"
        android:icon="@drawable/ic_progress"
        android:title="@string/progress"/>
    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="1"
        app:showAsAction="never"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings"/>
    <item
        android:id="@+id/options_menu_volume"
        android:title="@string/preferenceVolumeFunctionsSummary"
        android:icon="@drawable/ic_volume"
        app:showAsAction="never"
        android:checkable="true"
        android:checked="true"
        />
</menu>